--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="nav_bar">
-      <input type="text" placeholder="Search for a ffdood" />
+      <input type="text" placeholder="Search for a food" />
     </div>
     <div id="food_display"></div>
   </body>
